...
    <string name="nameLabel">Name</string>
    <string name="firstNameInput">Enter your name</string>
    <string name="intro">Introduce yourself!</string>
    <string name="introInput">Say anything</string>

    <!--Login Page-->
    <string name="loginMessage">Sign In</string>
    <string name="signInButton">Sign In</string>


    <!--User's Home Page-->
    <string name="profilePage">PlaceHolder</string>
    <string name="aboutMeLabel">About Me</string>
...
