<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_outline_home_24"
        android:iconTint="@color/text_heading"
        android:title="Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_outline_mail_24"
        android:iconTint="@color/text_heading"
        android:title="Notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_outline_person_24"
        android:iconTint="@color/text_heading"
        android:title="Profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_outline_settings_24"
        android:iconTint="@color/text_heading"
        android:title="Settings"
        app:showAsAction="always" />

</menu>